--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
     "extra": {
         "typo3/cms": {
             "cms-package-dir": "{$vendor-dir}/typo3/cms",
-            "extension-key": "typo3-blog"
+            "extension-key": "typo3_blog"
         }
     }
 }
