--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "phpstan/phpstan": "^1.9",
         "phpstan/phpstan-strict-rules": "^1.4",
         "phpstan/phpstan-deprecation-rules": "^1.1",
-        "squizlabs/php_codesniffer": "^3.7"
+        "squizlabs/php_codesniffer": "^3.7",
+        "ssch/typo3-rector": "^1.2"
     },
     "autoload": {
         "psr-4": {
