--- a/.github/workflows/phpcs.yml
+++ b/.github/workflows/phpcs.yml
@@ -1,6 +1,14 @@
 name: PHP_CodeSniffer
 
-on: [push, pull_request]
+# on: [push, pull_request]
+
+on:
+  pull_request:
+    branches:
+      - main
+  push:
+    branches:
+      - main
 
 jobs:
   run:
@@ -8,7 +16,8 @@ jobs:
 
     strategy:
       matrix:
-        operating-system: [ubuntu-22.04]
+        #operating-system: [ubuntu-22.04]
+        operating-system: [ubuntu-latest]
         #php-version: ['8.1', '8.2']
         php-version: ['8.2']
 
@@ -25,4 +34,5 @@ jobs:
 
       - run: composer validate
       - run: composer install --no-progress
-      - run: vendor/bin/phpcs Classes/ --standard=PSR12
+      #- run: vendor/bin/phpcs Classes/ --standard=PSR12
+      - run: vendor/bin/phpcs
