--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,25 +1,28 @@
 
-includes:
-    - vendor/phpstan/phpstan-strict-rules/rules.neon
+#includes:
+#    - vendor/phpstan/phpstan-strict-rules/rules.neon
 
 parameters:
-    level: 8
-
+    level: 7
     checkMissingIterableValueType: false
+    checkGenericClassInNonGenericObjectType: false
+    treatPhpDocTypesAsCertain: false
+    bootstrapFiles:
+        - phpstan_constants.php
 
     paths:
         - Classes/
         - Configuration/
         - Resources/
         - ext_localconf.php
+        - ext_emconf.php
 
     excludePaths:
         - vendor/*
-        - ext_emconf.php
-
+        - Tests
 
     # Ignore error, mainly due invalid PHP in TYPO3
-    ignoreErrors:
+    #ignoreErrors:
         # https://review.typo3.org/c/Packages/TYPO3.CMS/+/74340
         #- '#^Call to an undefined method object\:\:(.*).$#'
         #- '#^Property (.*) \(TYPO3\\CMS\\(.*)\) does not accept object.$#'
