--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "phpstan/phpstan-strict-rules": "^1.4",
         "phpstan/phpstan-deprecation-rules": "^1.1",
         "squizlabs/php_codesniffer": "^3.7",
+        "cakephp/cakephp-codesniffer": "^5.0",
         "ssch/typo3-rector": "^1.2"
     },
     "autoload": {
