--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
     "config": {
         "allow-plugins": {
             "typo3/cms-composer-installers": true,
-            "typo3/class-alias-loader": true
+            "typo3/class-alias-loader": true,
+            "dealerdirect/phpcodesniffer-composer-installer": true
         }
     },
     "extra": {
