--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "typo3-cms-extension",
     "description": "Typo3Blog Extension",
     "minimum-stability": "dev",
-    "prefer-stable": false,
+    "prefer-stable": true,
     "authors": [
         {
             "name": "Mike",
