--- a/composer.json
+++ b/composer.json
@@ -12,15 +12,19 @@
     ],
     "license": "AGPL-3.0",
     "require": {
-        "typo3/cms-core": "^11.5"
+        "typo3/cms-core": "^11.5",
+        "typo3/cms-backend": "^11.5",
+        "typo3/cms-frontend": "^11.5",
+        "typo3/cms-recordlist": "^11.5",
+        "typo3/cms-extbase": "^11.5"
     },
     "require-dev": {
-        "phpstan/phpstan": "^1.9",
+        "phpstan/phpstan": "^1.10",
         "phpstan/phpstan-strict-rules": "^1.4",
         "phpstan/phpstan-deprecation-rules": "^1.1",
         "squizlabs/php_codesniffer": "^3.7",
         "cakephp/cakephp-codesniffer": "^5.0",
-        "ssch/typo3-rector": "^1.2"
+        "ssch/typo3-rector": "^2.2"
     },
     "autoload": {
         "psr-4": {
