--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -5,10 +5,10 @@ name: PHPStan
 on:
   pull_request:
     branches:
-      - main
+      - main*
   push:
     branches:
-      - main
+      - main*
 
 jobs:
   run:
