--- a/.github/workflows/rector.yml
+++ b/.github/workflows/rector.yml
@@ -34,5 +34,6 @@ jobs:
 
       - run: composer validate
       - run: composer install --no-progress
-      - run: vendor/bin/rector process --dry-run --debug
+      #- run: vendor/bin/rector process --dry-run --debug
+      - run: vendor/bin/rector process --dry-run
       #- run: vendor/bin/phpstan analyse -c phpstan.neon
