--- a/.github/workflows/phpcs.yml
+++ b/.github/workflows/phpcs.yml
@@ -5,10 +5,10 @@ name: PHP_CodeSniffer
 on:
   pull_request:
     branches:
-      - main
+      - main*
   push:
     branches:
-      - main
+      - main*
 
 jobs:
   run:
