--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "description": "Typo3Blog Extension",
     "minimum-stability": "dev",
     "prefer-stable": true,
-    "version": "1.2.0",
+    "version": "2.0.0",
     "authors": [
         {
             "name": "Mike",
@@ -21,11 +21,8 @@
     },
     "require-dev": {
         "phpstan/phpstan": "^1.10",
-        "phpstan/phpstan-strict-rules": "^1.4",
-        "phpstan/phpstan-deprecation-rules": "^1.1",
-        "squizlabs/php_codesniffer": "^3.7",
-        "cakephp/cakephp-codesniffer": "^5.0",
-        "ssch/typo3-rector": "^1.8"
+        "ssch/typo3-rector": "^2.5",
+        "cakephp/cakephp-codesniffer": "^5.0"
     },
     "autoload": {
         "psr-4": {
